20110724:
- fix: garbage might be written after input error
- enhancement: prompt for additional volumes for argument "-n 0"
- enhancement: prompt for next volume on I/O error if -n is set
  (some tape devices incorrectly return -1/EIO instead of 0)
- enhancement: added option to append to output file
- update: remove use of deprecated interface sigignore

20110317:
- fix: terminate ASAP if no working output is available
- enhancement: added option to terminate on any error
- fix: mbuffer blocks on SIGTTIN when started in background
- fix: display correct dimensions (e.g. kiB instead of kB)

20110119:
- Anniversary: 10 years of mbuffer
- fix for building on cygwin in a separate directory
- fix: incorrect sanity check concerning hashing and multivolume support
  (patch by Sean Walmsley)

20101230:
- enhancement: hash should show up in log file
- enhancement: report last block number on volume
- enhancement: report times for each volume and tape changes
- cosmetic fix: need to convert thread ids to long for linux
- build enhancement: better cygwin and packaging environment support

20100526:
- fix: potential deadlock on SIGINT related to watermark algorithm
- fix: high watermark algorithm interferes with rate limitation

20100327:
- fix: hash calculation is omitted if no output is set
- fix: test procedure doesn't wait on Solaris 8
- some cosemtic fixes for the man page
- summary output to logfile should be independet of quiet mode

20091227:
- enforceSpeedLimit must use monotonic time source to prevent being
  disturbed by ntp
- made test suite configurable and clean-up itself
  (submitted by Peter Pentchev)
- made IPv6 code optional
- added check for block size of input device
- only determine 64bit compile flag if no CFLAGS given
- fix lockup on input error
- don't cancel non-existing thread in quiet mode
  (caused SegV on Linux)
- BSD header inclusion update
- SIGINT cancellation fixes (systems other than Solaris need a hack)

20091122: