@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_EXEEXT
 
 PACKAGE=mbuffer
-VERSION=20110724
+VERSION=20120505
 
 if test "${LD_LIBRARY_PATH}" != "" ; then
 	echo ""
